redesign and tweaks

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBB Blog</title>
+    <title>The Spoils of Overthinking</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600;700;900&family=Libre+Baskerville:wght@400;700&family=EB+Garamond:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,400;1,300;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="nav">
         <div class="container">
-            <a href="index.html" class="logo">MBB</a>
+            <a href="index.html" class="logo">The Spoils of Overthinking</a>
             <div class="nav-links">
                 <a href="index.html" class="nav-link active">Writing</a>
                 <a href="#about" class="nav-link">About</a>
@@ -20,12 +20,9 @@
         </div>
     </nav>
 
-    <header class="hero">
-        <div class="container">
-            <h1 class="hero-title" data-animate>Thoughts &<br>Observations</h1>
-            <p class="hero-subtitle" data-animate>A collection of writings on life, technology, and everything in between</p>
-        </div>
-    </header>
+    <div class="header-icon-section">
+        <img src="header_icon.png" alt="Header Icon" class="header-icon">
+    </div>
 
     <main class="main">
         <div class="container">
@@ -38,7 +35,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2026 MBB. All rights reserved.</p>
+                <p>&copy; 2026 The Spoils of Overthinking. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="mailto:hello@mbb.com">Contact</a>
                     <a href="#twitter">Twitter</a>
